added copy to clipboard button and fixed almost everything

--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
-    <div class="secondborder">
-    </div>
+
     <img src="logo.png">
     <a href="http://192.168.0.104:8080/hls/stream.m3u8">
-            <p class="btn"><strong>Watch MTV 80s stream</strong></p>
+            <p class="btn"><strong>Click here to watch MTV 80s</strong></p>
+    </a>
+    <a>
+            <p class="btn-copy" onclick="copytoclipboard()" id="copy"><strong>or click here to copy link</strong></p>
     </a>
     <p class="disclaimer">THIS IS A RECREATION. I DO NOT OWN ANY OF THE FOLLOWING MATERIAL. MTV 80s belongs to Paramount Global. I am not making money out of this.</p>
     <p class="info">
-        this will not work if you are not connected to the following wifi networks:<br><br>
+        viewing the stream will NOT work if you are not connected to the following wi-fi networks:<br><br>
 
         antex-2<br>
         antex-5<br><br><br><br><br><br><br><br><br><br>
     </p>
+
+<script src="copy.js"></script>
 </body>
 </html>
